# MusicApp

./: .gitignore  CMakeLists.txt  ConfigDialog.cpp  ConfigDialog.h  ConfigDialog.rc  DeviceManager.cpp  DeviceManager.h  LICENSE  MusicApp.cpp  MusicApp.h  README.md
